--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3 class="header-info">
           <img
             class="header-icon"
-            src="pictures for website/images-removebg-preview (4).png"
+            src="./images-removebg-preview (4).png"
           />
           <b><a href="index.html"> The Robot Shop </a></b>
         </h3>
@@ -60,7 +60,7 @@
           <div>
             <img
               class="jumbotron-img"
-              src="assets/img-header.jpeg"
+              src="img-header.jpeg"
               alt=""
               width="auto"
               height="300"
@@ -79,7 +79,7 @@
       <div class="image-slider">
         <div class="slide active">
           <img
-            src="pictures for website/Robot 1.jpeg"
+            src="Robot 1.jpeg"
             alt=""
           />
           <div class="slide-text">
@@ -91,7 +91,7 @@
         </div>
         <div class="slide">
           <img
-            src="pictures for website/download (24).jpeg"
+            src="download (24).jpeg"
             alt=""
           />
           <div class="slide-text">
@@ -118,7 +118,7 @@
         </div>
         <div class="slide">
           <img
-            src="pictures for website/images-removebg-preview (6).png"
+            src="images-removebg-preview (6).png"
             alt=""
           />
           <div class="slide-text">
@@ -132,7 +132,7 @@
         </div>
         <div class="slide">
           <img
-            src="pictures for website/images-removebg-preview (7).png"
+            src="images-removebg-preview (7).png"
             alt=""
           />
           <div class="slide-text">
