--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
           <h3 class="header-info">
             <img
               class="header-icon"
-              src="pictures for website/images-removebg-preview (4).png"
+              src="images-removebg-preview (4).png"
             />
             <b><a href="index.html"> The Robot Shop </a></b>
           </h3>
@@ -33,7 +33,7 @@
         <div class="ilustration">
           <img
             class="illustration-img"
-            src="assets/contact-illustration.png"
+            src="contact-illustration.png"
             alt=""
             width="800px"
           />
@@ -41,7 +41,7 @@
         <div class="contact">
           <img
             class="profile-contact-img"
-            src="assets/profile-contact.png"
+            src="profile-contact.png"
             alt=""
           />
           <h1 style="color: white">Contact Me</h1>
@@ -130,7 +130,7 @@
       </div>
       <div class="modal-container">
         <div class="modal">
-          <img src="assets/rocket.png" alt="" />
+          <img src="rocket.png" alt="" />
           <h3>Message Sent</h3>
           <p>Thank you for submitting !</p>
         </div>
