--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
           <h3 class="header-info">
             <img
               class="header-icon"
-              src="pictures for website/images-removebg-preview (4).png"
+              src="images-removebg-preview (4).png"
             />
             <b><a href="index.html"> The Robot Shop </a></b>
           </h3>
@@ -36,7 +36,7 @@
           <div class="about-image">
             <img
               class="blogger-image"
-              src="pictures for website/my-photo.jpg"
+              src="my-photo.jpg"
               alt="Profile Picture"
             />
           </div>
@@ -61,22 +61,22 @@
           <p style="color: white" class="section-subtitle">My Activity</p>
           <div class="activity-flex">
             <div class="activity-item">
-              <img src="pictures for website/Robot 1year.jpg" alt="1" />
+              <img src="Robot 1year.jpg" alt="1" />
             </div>
             <div class="activity-item">
-              <img src="pictures for website/Robot 3 years.jpg" alt="2" />
+              <img src="Robot 3 years.jpg" alt="2" />
             </div>
             <div class="activity-item">
-              <img src="pictures for website/Robot 5 years.jpg" alt="3" />
+              <img src="Robot 5 years.jpg" alt="3" />
             </div>
             <div class="activity-item">
-              <img src="pictures for website/Robot 6 months.jpg" alt="4" />
+              <img src="Robot 6 months.jpg" alt="4" />
             </div>
             <div class="activity-item">
-              <img src="pictures for website/Robot activity 1.jpg" alt="5" />
+              <img src="Robot activity 1.jpg" alt="5" />
             </div>
             <div class="activity-item">
-              <img src="pictures for website/10 years.jpg" alt="6" />
+              <img src="10 years.jpg" alt="6" />
             </div>
           </div>
         </div>
